--- a/packages/valory/services/oracle_hardhat/service.yaml
+++ b/packages/valory/services/oracle_hardhat/service.yaml
@@ -31,10 +31,12 @@ extra:
         - '0x3C44CdDdB6a900fa2b585dd299e03d12FA4293BC'
         - '0x90F79bf6EB2c4f870365E785982E1f101E93b906'
         safe_contract_address: '0xD8dE647170163a981bb3Fdb2063583eAcF7D55AC'
+        consensus_threshold: null
       reset_pause_duration: 30
       broadcast_to_server: false
       service_registry_address: '0x998abeb3E57409262aE5b751f60747921B33613E'
       on_chain_service_id: 1
+      share_tm_config_on_startup: false
   benchmark_persistence_params:
     args: &id003
       log_dir: /benchmarks
