--- a/packages/valory/services/oracle_polygon/service.yaml
+++ b/packages/valory/services/oracle_polygon/service.yaml
@@ -36,6 +36,9 @@ extra:
       max_healthcheck: 43200
       reset_pause_duration: 3000
       broadcast_to_server: true
+      share_tm_config_on_startup: ${USE_ACN:bool:false}
+      on_chain_service_id: ${ON_CHAIN_SERVICE_ID:int:none}
+      service_registry_address: ${SERVICE_REGISTRY:str:none}
       validate_timeout: 300
   valory_monitoring_backend:
     args: &id002
