--- a/Pipfile
+++ b/Pipfile
@@ -13,12 +13,12 @@ aiohttp = "==3.7.4.post0"
 asn1crypto = "==1.4.0"
 grpcio = "==1.43.0"
 hypothesis = "==6.21.6"
-open-aea = {version = "==1.31.0", extras = ["all"]}
-open-aea-ledger-ethereum = "==1.31.0"
-open-aea-ledger-cosmos = "==1.31.0"
-open-aea-cli-ipfs = "==1.31.0"
-open-aea-test-autonomy = "==0.10.0.post2"
-open-autonomy = {version = "==0.10.0.post2", extras = [ "all"]}
+open-aea = {version = "==1.32.0", extras = ["all"]}
+open-aea-ledger-ethereum = "==1.32.0"
+open-aea-ledger-cosmos = "==1.32.0"
+open-aea-cli-ipfs = "==1.32.0"
+open-aea-test-autonomy = "==0.10.1"
+open-autonomy = {version = "==0.10.1", extras = [ "all"]}
 pytz = "==2022.2.1"
 py-ecc = "==5.2.0"
 py-eth-sig-utils = "==0.4.0"
