--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -134,6 +134,7 @@ jobs:
         tox -e check-abci-docstrings
         tox -e check-abciapp-specs
         tox -e check-handlers
+        tox -e analyse-service
 
   scan:
     name: gitleaks
