--- a/tox.ini
+++ b/tox.ini
@@ -425,3 +425,9 @@ deps =
     tomte[liccheck]==0.2.4
 commands = {toxinidir}/scripts/freeze_dependencies.py -o {envtmpdir}/requirements.txt
            liccheck -s liccheck.ini -r {envtmpdir}/requirements.txt -l PARANOID
+
+[testenv:analyse-service]
+skipsdist = True
+usedevelop = True
+commands =
+    autonomy analyse service --public-id valory/oracle --skip-warnings
