--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ name = "pypi"
 [dev-packages]
 ### package deps
 aiohttp = "==3.7.4.post0"
+requests = "==2.28.2"
 asn1crypto = "==1.4.0"
 grpcio = "==1.43.0"
 hypothesis = "==6.21.6"
