--- a/tox.ini
+++ b/tox.ini
@@ -34,6 +34,7 @@ deps =
     py-eth-sig-utils==0.4.0
     scikit-learn==1.0.2
     statsmodels==0.13.2
+    requests==2.28.2
     # for http server connection
     openapi-core==0.13.2
     openapi-spec-validator==0.2.8
