--- a/packages/valory/services/oracle/service.yaml
+++ b/packages/valory/services/oracle/service.yaml
@@ -47,7 +47,7 @@ type: skill
           oracle_contract_address: ${ORACLE_CONTRACT_ADDRESS:str:null}
           consensus_threshold: ${CONSENSUS_THRESHOLD:int:null}
         max_healthcheck: ${MAX_HEALTHCHECK:int:43200}
-        multisend_address: ${MULTISEND_ADDRESS:str:'0xA238CBeb142c10Ef7Ad8442C6D1f9E89e07e7761'}
+        multisend_address: ${MULTISEND_ADDRESS:str:0xA238CBeb142c10Ef7Ad8442C6D1f9E89e07e7761}
         tendermint_p2p_url: ${TM_P2P_ENDPOINT_NODE_0:str:node0:26656}
         reset_pause_duration: ${RESET_PAUSE_DURATION:int:3000}
         broadcast_to_server: ${BROADCAST_TO_SERVER:bool:false}
@@ -81,7 +81,7 @@ type: skill
       args:
         setup: *id001
         max_healthcheck: ${MAX_HEALTHCHECK:int:43200}
-        multisend_address: ${MULTISEND_ADDRESS:str:'0xA238CBeb142c10Ef7Ad8442C6D1f9E89e07e7761'}
+        multisend_address: ${MULTISEND_ADDRESS:str:0xA238CBeb142c10Ef7Ad8442C6D1f9E89e07e7761}
         tendermint_p2p_url: ${TM_P2P_ENDPOINT_NODE_1:str:node1:26666}
         reset_pause_duration: ${RESET_PAUSE_DURATION:int:3000}
         broadcast_to_server: ${BROADCAST_TO_SERVER:bool:false}
@@ -111,7 +111,7 @@ type: skill
       args:
         setup: *id001
         max_healthcheck: ${MAX_HEALTHCHECK:int:43200}
-        multisend_address: ${MULTISEND_ADDRESS:str:'0xA238CBeb142c10Ef7Ad8442C6D1f9E89e07e7761'}
+        multisend_address: ${MULTISEND_ADDRESS:str:0xA238CBeb142c10Ef7Ad8442C6D1f9E89e07e7761}
         tendermint_p2p_url: ${TM_P2P_ENDPOINT_NODE_2:str:node2:26676}
         reset_pause_duration: ${RESET_PAUSE_DURATION:int:3000}
         broadcast_to_server: ${BROADCAST_TO_SERVER:bool:false}
@@ -142,7 +142,7 @@ type: skill
       args:
         setup: *id001
         max_healthcheck: ${MAX_HEALTHCHECK:int:43200}
-        multisend_address: ${MULTISEND_ADDRESS:str:'0xA238CBeb142c10Ef7Ad8442C6D1f9E89e07e7761'}
+        multisend_address: ${MULTISEND_ADDRESS:str:0xA238CBeb142c10Ef7Ad8442C6D1f9E89e07e7761}
         tendermint_p2p_url: ${TM_P2P_ENDPOINT_NODE_3:str:node3:26686}
         reset_pause_duration: ${RESET_PAUSE_DURATION:int:3000}
         broadcast_to_server: ${BROADCAST_TO_SERVER:bool:false}
