--- a/packages/valory/agents/oracle/aea-config.yaml
+++ b/packages/valory/agents/oracle/aea-config.yaml
@@ -70,11 +70,11 @@ logging_config:
       propagate: true
 dependencies:
   open-aea-ledger-cosmos:
-    version: ==1.33.0
+    version: ==1.34.0
   open-aea-ledger-ethereum:
-    version: ==1.33.0
+    version: ==1.34.0
   open-aea-test-autonomy:
-    version: ==0.10.4
+    version: ==0.10.5.post1
 skill_exception_policy: stop_and_exit
 connection_exception_policy: just_log
 default_connection: null
