--- a/packages/valory/contracts/offchain_aggregator/contract.yaml
+++ b/packages/valory/contracts/offchain_aggregator/contract.yaml
@@ -21,6 +21,6 @@ dependencies:
   eth-abi:
     version: ==2.2.0
   open-aea-ledger-ethereum:
-    version: ==1.33.0
+    version: ==1.34.0
   open-aea-test-autonomy:
-    version: ==0.10.4
+    version: ==0.10.5.post1
