--- a/tox.ini
+++ b/tox.ini
@@ -24,9 +24,9 @@ deps =
     hypothesis==6.21.6
     joblib==1.1.0
     numpy==1.21.6
-    open-aea-ledger-cosmos==1.33.0
-    open-aea-test-autonomy==0.10.4
-    open-autonomy[all]==0.10.4
+    open-aea-ledger-cosmos==1.34.0
+    open-aea-test-autonomy==0.10.5.post1
+    open-autonomy[all]==0.10.5.post1
     pandas==1.3.5
     pandas-stubs==1.2.0.62
     pytz==2022.2.1
@@ -290,7 +290,7 @@ commands = {toxinidir}/scripts/check_copyright.py
 [testenv:check-hash]
 skipsdist = True
 usedevelop = True
-deps = open-autonomy[all]==0.10.4
+deps = open-autonomy[all]==0.10.5.post1
 commands =
     autonomy init --reset --author ci --remote --ipfs --ipfs-node "/dns/registry.autonolas.tech/tcp/443/https"
     autonomy packages sync
