--- a/.github/workflows/main_workflow.yml
+++ b/.github/workflows/main_workflow.yml
@@ -55,16 +55,18 @@ jobs:
         sudo apt-get update --fix-missing
         sudo apt-get autoremove
         sudo apt-get autoclean
-        pip install tomte[tox]==0.2.4
+        pip install tomte[tox,cli]==0.2.12
         pip install --user --upgrade setuptools
     - name: Check copyright headers
-      run: tox -e check-copyright
+      run: tomte check-copyright --author valory --exclude-part connections --exclude-part contracts --exclude-part protocols --exclude-part abstract_abci --exclude-part abstract_round_abci --exclude-part registration_abci --exclude-part reset_pause_abci --exclude-part termination_abci --exclude-part transaction_settlement_abci
     - name: License compatibility check
       run: tox -e liccheck
     - name: Check pipfiles
       run: tox -e check-pipfiles
-    - name: Check doc links and IPFS hashes
-      run: tox -e check-doc-links-hashes
+    - name: Check doc links
+      run: tomte check-doc-links --url-skips "http://127.0.0.1:{i}" --http-skips "http://127.0.0.1:{i}"
+    - name: Check doc IPFS hashes
+      run: tox -e check-doc-hashes
 
   linter_checks:
     continue-on-error: False
@@ -87,7 +89,7 @@ jobs:
         sudo apt-get update --fix-missing
         sudo apt-get autoremove
         sudo apt-get autoclean
-        pip install tomte[tox]==0.2.4
+        pip install tomte[tox,cli]==0.2.12
         pip install --user --upgrade setuptools
 
         # install Protobuf compiler
@@ -109,26 +111,15 @@ jobs:
     - name: Check generate protocols
       run: tox -e check-generate-all-protocols
     - name: Security checks
-      run: |
-        tox -e bandit
-        tox -e safety
+      run: tomte check-security
     - name: Check packages
       run: tox -e check-packages
     - name: Check hash
       run: tox -e check-hash
-    - name: Code style check
-      run: |
-        tox -e black-check
-        tox -e isort-check
-        tox -e flake8
-        tox -e vulture
-        tox -e darglint
-    - name: Static type check
-      run: tox -e mypy
-    - name: Pylint
-      run: tox -e pylint
+    - name: Code checks
+      run: tomte check-code
     - name: Check spelling
-      run: tox -e spell-check
+      run: tomte check-spelling
     - name: AbciApp consistency checks
       run: |
         tox -e check-abci-docstrings
@@ -183,7 +174,7 @@ jobs:
           sudo apt-get update --fix-missing
           sudo apt-get autoremove
           sudo apt-get autoclean
-          pip install tomte[tox]==0.2.4
+          pip install tomte[tox]==0.2.12
           pip install --user --upgrade setuptools
 
           # install Protobuf compiler
@@ -204,7 +195,7 @@ jobs:
       - if: matrix.os == 'macos-latest'
         name: Install dependencies (macos-latest)
         run: |
-          pip install tomte[tox]==0.2.4
+          pip install tomte[tox]==0.2.12
           brew install gcc
           # brew install protobuf
           # brew install https://raw.githubusercontent.com/Homebrew/homebrew-core/72457f0166d5619a83f508f2345b22d0617b5021/Formula/protobuf.rb
@@ -232,7 +223,7 @@ jobs:
           choco install make -y
           # to check make was installed
           make --version
-          pip install tomte[tox]==0.2.4
+          pip install tomte[tox]==0.2.12
 
       - if: matrix.os == 'windows-latest'
         name: Packages unit tests windows-latest
@@ -276,7 +267,7 @@ jobs:
           sudo apt-get update --fix-missing
           sudo apt-get autoremove
           sudo apt-get autoclean
-          pip install tomte[tox]==0.2.4
+          pip install tomte[tox]==0.2.12
           pip install --user --upgrade setuptools
 
           # install Protobuf compiler
