--- a/Pipfile
+++ b/Pipfile
@@ -25,7 +25,7 @@ py-ecc = "==5.2.0"
 py-eth-sig-utils = "==0.4.0"
 ### tests deps
 mistune = "==2.0.3"
-tomte = {version = "==0.2.4", extras = ["tox", "tests"]}
+tomte = {version = "==0.2.12", extras = ["cli", "tests"]}
 # for http server connection
 openapi-core = "==0.13.2"
 openapi-spec-validator = "==0.2.8"
