--- a/tox.ini
+++ b/tox.ini
@@ -6,13 +6,13 @@
 ; we set the associated flag (e.g. for linting we don't need
 ; the package installation).
 [tox]
-envlist = bandit, safety, black, black-check, isort, isort-check, check-copyright, check-hash, check-packages, check-pipfiles, flake8, mypy, pylint, darglint, vulture, check-generate-all-protocols, check-abciapp-specs, check-abci-docstrings, check-handlers, py{3.7,3.8,3.9,3.10}-{win,linux,darwin}
+envlist = bandit, safety, black, black-check, isort, isort-check, check-hash, check-packages, check-pipfiles, flake8, mypy, pylint, darglint, check-generate-all-protocols, check-abciapp-specs, check-abci-docstrings, check-handlers, py{3.7,3.8,3.9,3.10}-{win,linux,darwin}
 ; when running locally we don't want to fail for no good reason
 skip_missing_interpreters = true
 
 [deps-tests]
 deps =
-    tomte[tests]==0.2.4
+    tomte[tests]==0.2.12
     mistune==2.0.3
 
 [deps-packages]
@@ -59,13 +59,14 @@ deps = {[deps-base]deps}
 [testenv]
 basepython = python3
 whitelist_externals = /bin/sh
-deps =
-    {[deps-base]deps}
+deps = {[deps-base]deps}
 passenv = *
 extras = all
 setenv =
     PYTHONHASHSEED=0
     PYTHONPATH={env:PWD:%CD%}
+    PACKAGES_PATHS = packages/valory
+    SKILLS_PATHS = {env:PACKAGES_PATHS}/skills
 
 [commands-base]
 commands =
@@ -75,15 +76,15 @@ commands =
 [commands-packages]
 commands =
     {[commands-base]commands}
-    pytest -rfE packages/valory/contracts/offchain_aggregator/tests --cov=packages/valory/contracts/offchain_aggregator --cov-report=xml --cov-report=term --cov-report=term-missing --cov-config=.coveragerc {posargs}
-    pytest -rfE packages/valory/skills/oracle_abci/tests --cov=packages/valory/skills/oracle_abci --cov-report=xml --cov-report=term --cov-report=term-missing --cov-config=.coveragerc {posargs}
-    pytest -rfE packages/valory/skills/oracle_deployment_abci/tests --cov=packages/valory/skills/oracle_deployment_abci --cov-report=xml --cov-report=term --cov-report=term-missing --cov-config=.coveragerc {posargs}
-    pytest -rfE packages/valory/skills/price_estimation_abci/tests --cov=packages/valory/skills/price_estimation_abci --cov-report=xml --cov-report=term --cov-report=term-missing --cov-config=.coveragerc {posargs}
+    pytest -rfE {env:PACKAGES_PATHS}/contracts/offchain_aggregator/tests --cov={env:PACKAGES_PATHS}/contracts/offchain_aggregator --cov-report=xml --cov-report=term --cov-report=term-missing --cov-config=.coveragerc {posargs}
+    pytest -rfE {env:SKILLS_PATHS}/oracle_abci/tests --cov={env:SKILLS_PATHS}/oracle_abci --cov-report=xml --cov-report=term --cov-report=term-missing --cov-config=.coveragerc {posargs}
+    pytest -rfE {env:SKILLS_PATHS}/oracle_deployment_abci/tests --cov={env:SKILLS_PATHS}/oracle_deployment_abci --cov-report=xml --cov-report=term --cov-report=term-missing --cov-config=.coveragerc {posargs}
+    pytest -rfE {env:SKILLS_PATHS}/price_estimation_abci/tests --cov={env:SKILLS_PATHS}/price_estimation_abci --cov-report=xml --cov-report=term --cov-report=term-missing --cov-config=.coveragerc {posargs}
 
 [commands-e2e]
 commands =
     {[commands-base]commands}
-    pytest packages/valory/agents/oracle/tests/test_oracle.py
+    pytest {env:PACKAGES_PATHS}/agents/oracle/tests/test_oracle.py
 
 [testenv:py3.7-linux]
 basepython = python3.7
@@ -232,60 +233,36 @@ commands = {[commands-e2e]commands}
 [testenv:bandit]
 skipsdist = True
 skip_install = True
-deps =
-    tomte[bandit]==0.2.4
+deps = tomte[bandit]==0.2.12
 commands =
-    bandit -s B101 -r packages/valory/skills/oracle_abci
-    bandit -s B101 -r packages/valory/skills/oracle_deployment_abci
-    bandit -s B101 -r packages/valory/skills/price_estimation_abci
+    bandit -s B101 -r {env:SKILLS_PATHS}/oracle_abci
+    bandit -s B101 -r {env:SKILLS_PATHS}/oracle_deployment_abci
+    bandit -s B101 -r {env:SKILLS_PATHS}/price_estimation_abci
     bandit -s B101 -r scripts
 
 [testenv:black]
 skipsdist = True
 skip_install = True
-deps =
-    tomte[black]==0.2.4
-commands =
-    black packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci scripts
+deps = tomte[black]==0.2.12
+commands = black {env:SKILLS_PATHS}/oracle_abci {env:SKILLS_PATHS}/oracle_deployment_abci {env:SKILLS_PATHS}/price_estimation_abci scripts
 
 [testenv:black-check]
 skipsdist = True
 skip_install = True
-deps =
-    tomte[black]==0.2.4
-commands =
-    black --check packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci
+deps = tomte[black]==0.2.12
+commands = black --check {env:SKILLS_PATHS}/oracle_abci {env:SKILLS_PATHS}/oracle_deployment_abci {env:SKILLS_PATHS}/price_estimation_abci
 
 [testenv:isort]
 skipsdist = True
 skip_install = True
-deps =
-    tomte[isort]==0.2.4
-commands =
-    isort packages/valory --gitignore
-    isort scripts/
+deps = tomte[isort]==0.2.12
+commands = isort --gitignore {env:PACKAGES_PATHS} scripts
 
 [testenv:isort-check]
 skipsdist = True
 skip_install = True
-deps =
-    tomte[isort]==0.2.4
-commands =
-    isort --check-only --gitignore packages/valory scripts
-
-[testenv:check-copyright]
-skipsdist = True
-skip_install = True
-deps =
-allowlist_externals = {toxinidir}/scripts/check_copyright.py
-commands = {toxinidir}/scripts/check_copyright.py --check
-
-[testenv:fix-copyright]
-skipsdist = True
-skip_install = True
-deps =
-allowlist_externals = {toxinidir}/scripts/check_copyright.py
-commands = {toxinidir}/scripts/check_copyright.py
+deps = tomte[isort]==0.2.12
+commands = isort --check-only --gitignore {env:PACKAGES_PATHS} scripts
 
 [testenv:check-hash]
 skipsdist = True
@@ -315,80 +292,60 @@ commands = {toxinidir}/scripts/check_pipfiles.py
 [testenv:flake8]
 skipsdist = True
 skip_install = True
-deps =
-    tomte[flake8]==0.2.4
-commands =
-    flake8 packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci scripts
+deps = tomte[flake8]==0.2.12
+commands = flake8 {env:SKILLS_PATHS}/oracle_abci {env:SKILLS_PATHS}/oracle_deployment_abci {env:SKILLS_PATHS}/price_estimation_abci scripts
 
 [testenv:mypy]
 skipsdist = True
 skip_install = True
-deps =
-    tomte[mypy]==0.2.4
-commands =
-    mypy packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci scripts --disallow-untyped-defs
+deps = tomte[mypy]==0.2.12
+commands = mypy {env:SKILLS_PATHS}/oracle_abci {env:SKILLS_PATHS}/oracle_deployment_abci {env:SKILLS_PATHS}/price_estimation_abci scripts --disallow-untyped-defs --config-file tox.ini
 
 [testenv:pylint]
 whitelist_externals = /bin/sh
 skipsdist = True
 deps =
     {[deps-packages]deps}
-    tomte[pylint]==0.2.4
-commands =
-    pylint --rcfile=setup.cfg packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci scripts
+    tomte[pylint]==0.2.12
+commands = pylint --ignore-patterns=".*_pb2.py" --ignore-paths="^packages/valory/.*$" --disable=C0103,R0801,R0912,C0301,C0201,C0204,C0209,W1203,C0302,R1735,R1729,W0511 {env:SKILLS_PATHS}/oracle_abci {env:SKILLS_PATHS}/oracle_deployment_abci {env:SKILLS_PATHS}/price_estimation_abci scripts
 
 [testenv:safety]
 skipsdist = True
 skip_install = True
-deps =
-    tomte[safety]==0.2.4
-commands =
-    safety check -i 37524 -i 38038 -i 37776 -i 38039 -i 39621 -i 40291 -i 39706 -i 41002 -i 51358 -i 51499
-
-[testenv:vulture]
-skipsdist = True
-skip_install = True
-deps = tomte[vulture]==0.2.4
-allowlist_externals = vulture scripts/whitelist.py
-commands = vulture scripts/whitelist.py
+deps = tomte[safety]==0.2.12
+commands = safety check -i 37524 -i 38038 -i 37776 -i 38039 -i 39621 -i 40291 -i 39706 -i 41002 -i 51358 -i 51499
 
 [testenv:darglint]
 skipsdist = True
 skip_install = True
-deps =
-    tomte[darglint]==0.2.4
-commands =
-    darglint packages/valory/skills/oracle_abci packages/valory/skills/oracle_deployment_abci packages/valory/skills/price_estimation_abci scripts
+deps = tomte[darglint]==0.2.12
+commands = darglint {env:SKILLS_PATHS}/oracle_abci {env:SKILLS_PATHS}/oracle_deployment_abci {env:SKILLS_PATHS}/price_estimation_abci scripts
 
 [testenv:check-generate-all-protocols]
 skipsdist = True
 usedevelop = True
 deps =
     {[deps-packages]deps}
-    tomte[isort]==0.2.4
-    tomte[black]==0.2.4
-commands =
-    autonomy generate-all-protocols --check-clean
+    tomte[isort]==0.2.12
+    tomte[black]==0.2.12
+commands = autonomy generate-all-protocols --check-clean
 
 [testenv:spell-check]
 whitelist_externals = mdspell
 skipsdist = True
 usedevelop = True
-deps =
-allowlist_externals = {toxinidir}/scripts/spell-check.sh
-commands = {toxinidir}/scripts/spell-check.sh
+deps = tomte[cli]
+commands = tomte check-spelling
 
 [testenv:abci-docstrings]
 skipsdist = True
 usedevelop = True
-commands =
-    autonomy analyse docstrings --update
+commands = autonomy analyse docstrings --update
 
 [testenv:check-abci-docstrings]
 skipsdist = True
 usedevelop = True
-commands =
-    autonomy analyse docstrings
+commands = autonomy analyse docstrings
 
 [testenv:check-abciapp-specs]
 skipsdist = True
@@ -401,34 +358,279 @@ commands =
 [testenv:check-handlers]
 skipsdist = True
 usedevelop = True
-commands =
-    autonomy analyse handlers -h abci -h http -h contract_api -h ledger_api -h signing -i abstract_abci -i counter -i counter_client -i hello_world_abci
+commands = autonomy analyse handlers -h abci -h http -h contract_api -h ledger_api -h signing -i abstract_abci -i counter -i counter_client -i hello_world_abci
 
-[testenv:check-doc-links-hashes]
+[testenv:check-doc-hashes]
 skipsdist = True
 skip_install = True
 commands =
     aea init --reset --author ci --remote --ipfs --ipfs-node "/dns/registry.autonolas.tech/tcp/443/https"
     aea packages sync
-    {toxinidir}/scripts/check_doc_links.py
     {toxinidir}/scripts/check_doc_ipfs_hashes.py
 
 [testenv:fix-doc-hashes]
 skipsdist = True
 skip_install = True
-commands =
-    {toxinidir}/scripts/check_doc_ipfs_hashes.py --fix
+commands = {toxinidir}/scripts/check_doc_ipfs_hashes.py --fix
 
 [testenv:liccheck]
 skipsdist = True
 usedevelop = True
-deps =
-    tomte[liccheck]==0.2.4
-commands = {toxinidir}/scripts/freeze_dependencies.py -o {envtmpdir}/requirements.txt
-           liccheck -s liccheck.ini -r {envtmpdir}/requirements.txt -l PARANOID
+deps = tomte[liccheck,cli]==0.2.12
+commands =
+    tomte freeze-dependencies --output-path {envtmpdir}/requirements.txt
+    liccheck -s tox.ini -r {envtmpdir}/requirements.txt -l PARANOID
 
 [testenv:analyse-service]
 skipsdist = True
 usedevelop = True
-commands =
-    autonomy analyse service --public-id valory/oracle --skip-warnings
+commands = autonomy analyse service --public-id valory/oracle --skip-warnings
+
+[flake8]
+paths=packages
+exclude=.md,
+    *_pb2.py,
+    *_pb2_grpc.py,
+    custom_types.py,
+    packages/valory/connections
+    packages/valory/contracts
+    packages/valory/protocols
+    {env:SKILLS_PATHS/abstract_abci
+    {env:SKILLS_PATHS/abstract_round_abci
+    {env:SKILLS_PATHS/registration_abci
+    {env:SKILLS_PATHS/reset_pause_abci
+    {env:SKILLS_PATHS/transaction_settlement_abci
+    {env:SKILLS_PATHS/termination_abci
+
+max-line-length = 88
+select = B,C,D,E,F,I,W,
+ignore = E203,E501,W503,D202,B014,D400,D401,DAR
+application-import-names = packages,tests,scripts
+
+# ignore as too restrictive for our needs:
+# D400: First line should end with a period
+# D401: First line should be in imperative mood
+# E501: https://www.flake8rules.com/rules/E501.html (Line too long)
+# E203: https://www.flake8rules.com/rules/E203.html (Whitespace)
+# W503: https://www.flake8rules.com/rules/W503.html (Line break)
+# D202: blank lines
+# B014: redundant exception
+
+[isort]
+# for black compatibility
+multi_line_output=3
+include_trailing_comma=True
+force_grid_wrap=0
+use_parentheses=True
+ensure_newline_before_comments = True
+line_length=88
+# custom configurations
+order_by_type=False
+case_sensitive=True
+lines_after_imports=2
+skip=packages/valory/protocols/open_aea,protocol/valory/abci,protocol/valory/contract_api,protocol/valory/http,protocol/valory/ledger_api,protocol/valory/acn,protocol/valory/ipfs,protocol/valory/tendermint,skill/valory/abstract_abci,skill/valory/reset_pause_abci,skill/valory/registration_abci,skill/valory/abstract_round_abci,contract/valory/service_registry,connection/valory/abci,connection/valory/http_client,connection/valory/ipfs,connection/valory/ledger,connection/valory/p2p_libp2p_client,connection/fetchai/http_server,contract/valory/gnosis_safe_proxy_factory,contract/valory/gnosis_safe,skill/valory/transaction_settlement_abci,contract/valory/multisend,skill/valory/termination_abci,
+skip_glob =
+known_first_party=autonomy
+known_packages=packages
+known_local_folder=tests
+sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,PACKAGES,LOCALFOLDER
+
+[mypy]
+python_version = 3.10
+strict_optional = True
+exclude=(.*_pb2|.*custom_types)
+
+# Before adding a module here, make sure it does not support type hints
+# Per-module options for aea dir:
+
+[mypy-aea.*]
+ignore_missing_imports = True
+
+[mypy-packages.open_aea.*]
+ignore_errors=True
+
+[mypy-packages.valory.connections.*]
+ignore_errors=True
+
+[mypy-packages.valory.contracts.*]
+ignore_errors=True
+
+[mypy-packages.valory.protocols.*]
+ignore_errors=True
+
+[mypy-packages.valory.skills.abstract_abci.*]
+ignore_errors=True
+
+[mypy-packages.valory.skills.abstract_round_abci.*]
+ignore_errors=True
+
+[mypy-packages.valory.skills.registration_abci.*]
+ignore_errors=True
+
+[mypy-requests]
+ignore_missing_imports=True
+
+[mypy-yaml]
+ignore_missing_imports=True
+
+[mypy-aea_test_autonomy.*]
+ignore_missing_imports = True
+
+[mypy-_pytest.*]
+ignore_missing_imports = True
+
+[mypy-aea_ledger_ethereum.*]
+ignore_missing_imports=True
+
+[mypy-ipfshttpclient.*]
+ignore_missing_imports = True
+
+[mypy-pytest]
+ignore_missing_imports = True
+
+[mypy-hypothesis.*]
+ignore_missing_imports = True
+
+[mypy-docker.*]
+ignore_missing_imports = True
+
+[mypy-certifi.*]
+ignore_missing_imports = True
+
+[mypy-pandas.*]
+ignore_missing_imports = True
+
+[mypy-aea_cli_ipfs.*]
+ignore_missing_imports = True
+
+[mypy-py_eth_sig_utils.*]
+ignore_missing_imports = True
+
+[mypy-web3.*]
+ignore_missing_imports = True
+
+[darglint]
+docstring_style=sphinx
+strictness=short
+ignore_regex=async_act
+ignore=DAR401
+
+[pytest]
+log_cli = 1
+log_cli_level = DEBUG
+log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
+log_cli_date_format=%Y-%m-%d %H:%M:%S
+asyncio_mode=strict
+
+markers =
+    integration: marks integration tests which require other network services
+    e2e: marks end-to-end agent tests
+
+filterwarnings = ignore::DeprecationWarning:aea.*:
+
+; some useful links:
+; - https://janelia-flyem.github.io/licenses.html
+; - https://dwheeler.com/essays/floss-license-slide.html
+
+; Authorized and unauthorized licenses in LOWER CASE
+[Licenses]
+authorized_licenses:
+    ; aliases for MIT License
+    MIT
+    MIT license
+    https://opensource.org/licenses/MIT
+    License :: OSI Approved :: MIT
+
+    ; aliases for BSD License (and variants)
+    BSD
+    BSD license
+    new BSD
+    (new) BSD
+    new BDS license
+    simplified BSD
+    3-Clause BSD
+    BSD-3-Clause
+    BSD 3-Clause
+    BSD-2-Clause
+    BSD-like
+    BSD-2-Clause or Apache-2.0
+    BSD, Public Domain
+
+        ; Apache
+        Apache Software
+
+    ; aliases for Apache License version 2.0
+    Apache 2.0
+    Apache-2.0
+    Apache License 2.0
+    Apache License, Version 2.0
+    Apache License Version 2.0
+    Apache2
+    ASL 2
+;   some packages use 'Apache Software' as license string,
+;   which is ambiguous. However, 'Apache Software'
+;   will likely match with 'Apache 2.0'
+    Apache Software
+    BSD, Public Domain, Apache
+    http://www.apache.org/licenses/LICENSE-2.0
+
+;   PSF (BSD-style)
+    Python Software Foundation
+    PSF
+
+    ; other permissive licenses
+    Historical Permission Notice and Disclaimer (HPND)
+    HPND
+    ISC
+    BSD or Apache License, Version 2.0
+    Modified BSD
+    Expat
+        Public Domain
+
+unauthorized_licenses:
+;   aliases for MPL 2.0
+    MPL-2.0
+    MPL 2.0
+    Mozilla Public License 2.0 (MPL 2.0)
+
+;    Section 8 of https://www.mozilla.org/en-US/MPL/2.0/Revision-FAQ/
+    MPL 1.1
+    MPL-1.1
+
+;   http://www.gnu.org/licenses/license-list.en.html#apache2
+    GPLv2
+    GPLv2+
+    GNU General Public License v2 or later (GPLv2+)
+
+;   LGPL
+    LGPL
+    GNU Library or Lesser General Public License (LGPL)
+
+;   LGPLv2.1
+    LGPLv2.1
+    LGPLv2.1+
+        GNU Lesser General Public License v2 or later (LGPLv2+)
+
+;   LGPLv3
+    GNU Lesser General Public License v3 (LGPLv3)
+    LGPLv3
+
+;   GPL v3
+    GPL v3
+    GPLv3+
+        GNU General Public License v3 (GPLv3)
+
+[Authorized Packages]
+gym: >=0.15
+;filelock is public domain
+filelock: >=3.0.12
+fetchai-ledger-api: >=0.0.1
+chardet: >=3.0.4
+certifi: >=2019.11.28
+;TODO: the following are conflicting packages that need to be sorted
+; sub-dep of open-aea-ledger-ethereum-hwi
+hidapi: >=0.13.1
+; shows in pip freeze but not referenced on code
+paramiko: >=3.1.0
+; sub-dep of docker-compose
+websocket-client: >=0.59.0
