--- a/packages/valory/agents/oracle/aea-config.yaml
+++ b/packages/valory/agents/oracle/aea-config.yaml
@@ -74,7 +74,7 @@ dependencies:
   open-aea-ledger-ethereum:
     version: ==1.34.0
   open-aea-test-autonomy:
-    version: ==0.10.5.post2
+    version: ==0.10.6
 skill_exception_policy: stop_and_exit
 connection_exception_policy: just_log
 default_connection: null
