--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ packages/valory/skills/termination_abci
 packages/valory/skills/transaction_settlement_abci
 packages/open_aea
 packages/fetchai
+/logs/
