--- a/Pipfile
+++ b/Pipfile
@@ -12,17 +12,17 @@ name = "pypi"
 aiohttp = "==3.7.4.post0"
 requests = "==2.28.2"
 asn1crypto = "==1.4.0"
-grpcio = "==1.47.5"
+grpcio = "==1.53.0"
 hypothesis = "==6.21.6"
-open-aea = {version = "==1.37.0", extras = ["all"]}
-open-aea-ledger-ethereum = "==1.37.0"
-open-aea-ledger-cosmos = "==1.37.0"
-open-aea-cli-ipfs = "==1.37.0"
-open-aea-test-autonomy = "==0.10.10.post1"
-open-autonomy = {version = "==0.10.10.post1", extras = [ "all"]}
+eth-abi = "==4.0.0"
+open-aea = {version = "==1.38.0", extras = ["all"]}
+open-aea-ledger-ethereum = "==1.38.0"
+open-aea-ledger-cosmos = "==1.38.0"
+open-aea-cli-ipfs = "==1.38.0"
+open-aea-test-autonomy = "==0.11.0"
+open-autonomy = {version = "==0.11.0", extras = [ "all"]}
 pytz = "==2022.2.1"
-py-ecc = "==5.2.0"
-py-eth-sig-utils = "==0.4.0"
+py-ecc = "==6.0.0"
 ### tests deps
 mistune = "==2.0.3"
 tomte = {version = "==0.2.12", extras = ["cli", "tests"]}
