--- a/tox.ini
+++ b/tox.ini
@@ -20,24 +20,24 @@ deps =
     {[deps-tests]deps}
     aiohttp==3.7.4.post0
     asn1crypto==1.4.0
-    grpcio==1.47.5
+    grpcio==1.53.0
     hypothesis==6.21.6
     joblib==1.1.0
-    numpy==1.21.6
-    open-aea-ledger-cosmos==1.37.0
-    open-aea-test-autonomy==0.10.10.post1
-    open-autonomy[all]==0.10.10.post1
-    pandas==1.3.5
+    numpy>=1.21.6
+    open-aea-ledger-cosmos==1.38.0
+    open-aea-test-autonomy==0.11.0
+    open-autonomy[all]==0.11.0
+    pandas>=1.5.3
     pandas-stubs==1.2.0.62
     pytz==2022.2.1
-    py-ecc==5.2.0
-    py-eth-sig-utils==0.4.0
+    py-ecc==6.0.0
     scikit-learn==1.0.2
     statsmodels==0.13.2
     requests==2.28.2
     # for http server connection
     openapi-core==0.13.2
     openapi-spec-validator==0.2.8
+    eth-abi==4.0.0
 
 [deps-base]
 deps ={[deps-packages]deps}
@@ -267,7 +267,7 @@ commands = isort --check-only --gitignore {env:PACKAGES_PATHS} scripts
 [testenv:check-hash]
 skipsdist = True
 usedevelop = True
-deps = open-autonomy[all]==0.10.10.post1
+deps = open-autonomy[all]==0.11.0
 commands =
     autonomy init --reset --author ci --remote --ipfs --ipfs-node "/dns/registry.autonolas.tech/tcp/443/https"
     autonomy packages sync
