--- a/tox.ini
+++ b/tox.ini
@@ -31,8 +31,8 @@ deps =
     pandas-stubs==1.2.0.62
     pytz==2022.2.1
     py-ecc==6.0.0
-    scikit-learn==1.0.2
-    statsmodels==0.13.2
+    scikit-learn>=1.0.2
+    statsmodels>=0.13.2
     requests==2.28.2
     # for http server connection
     openapi-core==0.13.2
