--- a/packages/valory/contracts/offchain_aggregator/contract.yaml
+++ b/packages/valory/contracts/offchain_aggregator/contract.yaml
@@ -21,8 +21,8 @@ dependencies:
   eth-abi:
     version: ==4.0.0
   open-aea-ledger-ethereum:
-    version: ==1.38.0
+    version: ==1.39.0.post1
   open-aea-test-autonomy:
-    version: ==0.11.1
+    version: ==0.12.1.post4
   eth-typing:
     version: ==3.4.0
