--- a/tox.ini
+++ b/tox.ini
@@ -24,9 +24,9 @@ deps =
     hypothesis==6.21.6
     joblib==1.1.0
     numpy>=1.21.6
-    open-aea-ledger-cosmos==1.38.0
-    open-aea-test-autonomy==0.11.1
-    open-autonomy[all]==0.11.1
+    open-aea-ledger-cosmos==1.39.0.post1
+    open-aea-test-autonomy==0.12.1.post4
+    open-autonomy[all]==0.12.1.post4
     pandas>=1.5.3
     pandas-stubs==1.2.0.62
     pytz==2022.2.1
@@ -267,7 +267,7 @@ commands = isort --check-only --gitignore {env:PACKAGES_PATHS} scripts
 [testenv:check-hash]
 skipsdist = True
 usedevelop = True
-deps = open-autonomy[all]==0.11.1
+deps = open-autonomy[all]==0.12.1.post4
 commands =
     autonomy init --reset --author ci --remote --ipfs --ipfs-node "/dns/registry.autonolas.tech/tcp/443/https"
     autonomy packages sync
