fix: breaking changes

--- a/packages/valory/skills/oracle_abci/skill.yaml
+++ b/packages/valory/skills/oracle_abci/skill.yaml
@@ -152,6 +152,11 @@ models:
       use_termination: false
       validate_timeout: 1205
       service_endpoint_base: https://dummy_service.autonolas.tech/
+      use_slashing: false
+      slash_cooldown_hours: 3
+      slash_threshold_amount: 10000000000000000
+      light_slash_unit_amount: 5000000000000000
+      serious_slash_unit_amount: 8000000000000000
     class_name: Params
   price_api:
     args:
