--- a/packages/valory/services/oracle/service.yaml
+++ b/packages/valory/services/oracle/service.yaml
@@ -7,7 +7,7 @@ license: Apache-2.0
 fingerprint:
   README.md: bafybeidfvq6yso3dpxgglq7fvviy42xjf3s7bn5thmi7ogv2j6pag3rene
 fingerprint_ignore_patterns: []
-agent: valory/oracle:0.1.0:bafybeia5hjicjkxqprfllpesf2xvgpocreerbqleomdhrdjx4ueutpp34q
+agent: valory/oracle:0.1.0:bafybeigptrw3acgzwgojjqd7d6eviczqfrolfmljqxag3fxq3xxca7f4wa
 number_of_agents: 4
 deployment:
   agent:
@@ -66,6 +66,7 @@ type: skill
         slash_threshold_amount: ${SLASH_THRESHOLD_AMOUNT:int:10000000000000000}
         light_slash_unit_amount: ${LIGHT_SLASH_UNIT_AMOUNT:int:5000000000000000}
         serious_slash_unit_amount: ${SERIOUS_SLASH_UNIT_AMOUNT:int:8000000000000000}
+        sleep_time: ${SLEEP_TIME:int:5}
     server_api:
       args: &id003
         url: ${SERVER_API:str:http://localhost:8060/deposit}
@@ -107,6 +108,7 @@ type: skill
         slash_threshold_amount: ${SLASH_THRESHOLD_AMOUNT:int:10000000000000000}
         light_slash_unit_amount: ${LIGHT_SLASH_UNIT_AMOUNT:int:5000000000000000}
         serious_slash_unit_amount: ${SERIOUS_SLASH_UNIT_AMOUNT:int:8000000000000000}
+        sleep_time: ${SLEEP_TIME:int:5}
     server_api:
       args: *id003
     benchmark_tool:
@@ -144,6 +146,7 @@ type: skill
         slash_threshold_amount: ${SLASH_THRESHOLD_AMOUNT:int:10000000000000000}
         light_slash_unit_amount: ${LIGHT_SLASH_UNIT_AMOUNT:int:5000000000000000}
         serious_slash_unit_amount: ${SERIOUS_SLASH_UNIT_AMOUNT:int:8000000000000000}
+        sleep_time: ${SLEEP_TIME:int:5}
     server_api:
       args: *id003
     benchmark_tool:
@@ -182,6 +185,7 @@ type: skill
         slash_threshold_amount: ${SLASH_THRESHOLD_AMOUNT:int:10000000000000000}
         light_slash_unit_amount: ${LIGHT_SLASH_UNIT_AMOUNT:int:5000000000000000}
         serious_slash_unit_amount: ${SERIOUS_SLASH_UNIT_AMOUNT:int:8000000000000000}
+        sleep_time: ${SLEEP_TIME:int:5}
     server_api:
       args: *id003
     benchmark_tool:
