--- a/tox.ini
+++ b/tox.ini
@@ -24,9 +24,9 @@ deps =
     hypothesis==6.21.6
     joblib==1.1.0
     numpy>=1.21.6
-    open-aea-ledger-cosmos==1.39.0.post1
-    open-aea-test-autonomy==0.12.1.post4
-    open-autonomy[all]==0.12.1.post4
+    open-aea-ledger-cosmos==1.41.0
+    open-aea-test-autonomy==0.13.1
+    open-autonomy[all]==0.13.1
     pandas>=1.5.3
     pandas-stubs==1.2.0.62
     pytz==2022.2.1
@@ -38,6 +38,7 @@ deps =
     openapi-core==0.13.2
     openapi-spec-validator==0.2.8
     eth-abi==4.0.0
+    jsonschema>=4.16.0,<=4.19.0
 
 [deps-base]
 deps ={[deps-packages]deps}
@@ -267,7 +268,7 @@ commands = isort --check-only --gitignore {env:PACKAGES_PATHS} scripts
 [testenv:check-hash]
 skipsdist = True
 usedevelop = True
-deps = open-autonomy[all]==0.12.1.post4
+deps = open-autonomy[all]==0.13.1
 commands =
     autonomy init --reset --author ci --remote --ipfs --ipfs-node "/dns/registry.autonolas.tech/tcp/443/https"
     autonomy packages sync
