--- a/Pipfile
+++ b/Pipfile
@@ -15,12 +15,12 @@ asn1crypto = "==1.4.0"
 grpcio = "==1.53.0"
 hypothesis = "==6.21.6"
 eth-abi = "==4.0.0"
-open-aea = {version = "==1.39.0.post1", extras = ["all"]}
-open-aea-ledger-ethereum = "==1.39.0.post1"
-open-aea-ledger-cosmos = "==1.39.0.post1"
-open-aea-cli-ipfs = "==1.39.0.post1"
-open-aea-test-autonomy = "==0.12.1.post4"
-open-autonomy = {version = "==0.12.1.post4", extras = [ "all"]}
+open-aea = {version = "==1.41.0", extras = ["all"]}
+open-aea-ledger-ethereum = "==1.41.0"
+open-aea-ledger-cosmos = "==1.41.0"
+open-aea-cli-ipfs = "==1.41.0"
+open-aea-test-autonomy = "==0.13.1"
+open-autonomy = {version = "==0.13.1", extras = [ "all"]}
 pytz = "==2022.2.1"
 py-ecc = "==6.0.0"
 ### tests deps
@@ -29,6 +29,7 @@ tomte = {version = "==0.2.12", extras = ["cli", "tests"]}
 # for http server connection
 openapi-core = "==0.13.2"
 openapi-spec-validator = "==0.2.8"
+jsonschema = ">=4.16.0,<=4.19.0"
 
 [requires]
 python_version = "3.10"
