--- a/tox.ini
+++ b/tox.ini
@@ -39,6 +39,7 @@ deps =
     openapi-spec-validator==0.2.8
     eth-abi==4.0.0
     jsonschema>=4.16.0,<=4.19.0
+    protobuf<4.25.0,>=4.21.6
 
 [deps-base]
 deps ={[deps-packages]deps}
