--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ name = "pypi"
 
 [dev-packages]
 ### package deps
-aiohttp = "==3.7.4.post0"
+aiohttp = "<4.0.0,>=3.8.5"
 requests = "==2.28.1"
 asn1crypto = "==1.4.0"
 grpcio = "==1.53.0"
